--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+/* font-family: 'Raleway', sans-serif; */
+
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap');
+
+/* font-family: 'Open Sans', sans-serif; */
+
 * {
     font-family: 'Raleway', sans-serif;
 }
@@ -84,4 +91,32 @@ main {
     padding: 22px 158px;
     border-radius: 50px;
     text-decoration: none;
+}
+
+footer {
+    box-shadow: 0px -5px 40px #00000029;
+}
+
+footer .container {
+    height: 90px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.footer__logo {
+    color: #08A6E4;
+    font-size: 26px;
+    margin: auto 0;
+    font-weight: normal;
+}
+
+.footer__left p {
+    padding-top: 10px;
+    font-size: 11;
+    color: #A5A5A5;
+}
+
+.footer__right img {
+    margin-left: 10px;
 }
