--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,9 @@ body {
 header {
     width: 100%;
     box-shadow: 0 3px 6px rgba(128, 128, 128, 0.479);
+    position: fixed;
+    top: 0;
+    background-color: white;
 }
 
 main {
